# prot

./: .env  .pre-commit-config.yaml  .prefectignore  CONTRIBUTING.md  README.md  docker-compose.yml  ingest_uniprot_into_neo4j_flow-deployment.yaml  pyproject.toml  tox.ini
.github/workflows/: docs.yml
prot/: flows.py  uniprot2graph_config.py  xml_extract.py
tests/: __init__.py  test_flows.py  test_weave_challenge.py  test_xml_extract.py
weave_challenge/: __init__.py  flows.py  uniprot2graph_config.py  xml_extract.py
