[tool.poetry]
name = "prot"
version = "0.1.0"
description = ""
authors = ["Nuno Costa <91nunocosta@gmail.com>"]
readme = "README.md"
repository = "https://github.com/91nunocosta/prot/"
documentation = "https://91nunocosta.github.io/prot/prot.html"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
prefect = "^2.8.5"
py2neo = "^2021.2.3"
inflection = "^0.5.1"
[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^2.15.0"
mypy = "^1.0.0"
pylint = "^2.16.1"
types-python-dateutil = "^2.8.19.10"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.cd]
optional = true

[tool.poetry.group.cd.dependencies]
python-semantic-release = "^7.33.1"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
